fix(ui) Fix small issues on Safari.

--- a/hub/ui/static/style/main.css
+++ b/hub/ui/static/style/main.css
@@ -244,25 +244,31 @@ main {
     display: grid;
     grid-template: "icon action";
     align-content: start;
-    margin-block: 1rem;
+    border: 1px red solid;
 }
 
     .thing--actionable > .thing--actionable-icon {
         grid-area: icon;
         justify-self: left;
+        text-align: left;
+        border: 1px red solid;
     }
 
     .thing--frame-content > .thing--actionable-icon > .thing--actionable-icon-wrapper {
-        height: 2rem;
-        width: 2rem;
+        height: 1.5rem;
+        width: 1.5rem;
         color: var(--color-light-300);
         filter: drop-shadow(0 0 3px var(--color-light-200));
+        border: 1px red solid;
     }
 
     .thing--actionable > .thing--actionable-action {
         grid-area: action;
         justify-self: right;
-        width: 2rem;
+        text-align: right;
+        width: 2.5rem;
+        height: 2.5rem;
+        border: 1px red solid;
     }
 
 .thing--expandable {}
@@ -571,18 +577,16 @@ a {
 
 button {
     appeareance: none;
-    -moz-appaerance: none;
-    -webkit-appearance: none;
     cursor: pointer;
 
     color: var(--color-dark-500);
     font: inherit;
     font-weight: 600;
 
-    padding: 20%;
     margin: 0;
+    padding: 0;
     width: 100%;
-    aspect-ratio: 1 / 1;
+    height: 100%;
 
     background: linear-gradient(145deg, #fff, #e6e6e6);
     box-shadow: 22px 22px 78px #d6d6d6,
@@ -598,11 +602,15 @@ button {
         border-color: var(--color-green-600);
     }
 
+    .button__small {
+        width: 2rem;
+        height: 2rem;
+    }
+
 .icon {
     max-width: 100%;
     height: 100%;
     max-height: 2.4em;
-    padding: 2px;
 }
 
     .header .icon {
